text-log.txt

> typo-terminator@0.1.0 start
> react-scripts start && nodemon server.js

Starting the development server...

Compiled successfully!

You can now view typo-terminator in the browser.

  Local:            http://localhost:3000
  On Your Network:  http://192.168.1.169:3000

Note that the development build is not optimized.
To create a production build, use npm run build.

webpack compiled [1m[32msuccessfully[39m[22m
Compiling...
Failed to compile.

[eslint] 
src\component\LoginForm.js
Syntax error: Adjacent JSX elements must be wrapped in an enclosing tag. Did you want a JSX fragment <>...</>? (117:2) (117:2)
[1m[31mERROR[39m[22m in [1m./src/component/LoginForm.js[39m[22m
[1mModule build [1m[31mfailed[39m[22m[1m (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\src\component\LoginForm.js: Adjacent JSX elements [1m[33mmust[39m[22m[1m be wrapped in an enclosing tag. Did you want a JSX fragment <>...</>? (117:2)

  115 |     </div>
  116 |
> 117 |   </div>
      |   ^
  118 | </div>
  119 | ///
  120 |
    at instantiate (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:653:32)
    at constructor (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:947:12)
    at FlowParserMixin.raise (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:3261:19)
    at FlowParserMixin.jsxParseElementAt (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:6972:18)
    at FlowParserMixin.jsxParseElement (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:6981:17)
    at FlowParserMixin.parseExprAtom (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:6993:19)
    at FlowParserMixin.parseExprSubscripts (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:10870:23)
    at FlowParserMixin.parseUpdate (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:10853:21)
    at FlowParserMixin.parseMaybeUnary (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:10829:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:10667:61)
    at FlowParserMixin.parseExprOps (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:10672:23)
    at FlowParserMixin.parseMaybeConditional (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:10649:23)
    at FlowParserMixin.parseMaybeAssign (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:10610:21)
    at C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:5766:39
    at FlowParserMixin.tryParse (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:3640:20)
    at FlowParserMixin.parseMaybeAssign (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:5766:18)
    at C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:10580:39
    at FlowParserMixin.allowInAnd (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:12255:12)
    at FlowParserMixin.parseMaybeAssignAllowIn (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:10580:17)
    at FlowParserMixin.parseParenAndDistinguishExpression (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:11488:28)
    at FlowParserMixin.parseParenAndDistinguishExpression (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:5865:18)
    at FlowParserMixin.parseExprAtom (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:11139:23)
    at FlowParserMixin.parseExprAtom (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:6998:20)
    at FlowParserMixin.parseExprSubscripts (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:10870:23)
    at FlowParserMixin.parseUpdate (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:10853:21)
    at FlowParserMixin.parseMaybeUnary (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:10829:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:10667:61)
    at FlowParserMixin.parseExprOps (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:10672:23)
    at FlowParserMixin.parseMaybeConditional (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:10649:23)
    at FlowParserMixin.parseMaybeAssign (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:10610:21)
    at FlowParserMixin.parseMaybeAssign (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:5821:18)
    at FlowParserMixin.parseExpressionBase (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:10564:23)
    at C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:10560:39
    at FlowParserMixin.allowInAnd (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:12250:16)
    at FlowParserMixin.parseExpression (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:10560:17)
    at FlowParserMixin.parseReturnStatement (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:12930:28)
    at FlowParserMixin.parseStatementContent (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:12577:21)
    at FlowParserMixin.parseStatementLike (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:12544:17)
    at FlowParserMixin.parseStatementLike (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:5139:24)
    at FlowParserMixin.parseStatementListItem (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:12524:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:13116:61)
    at FlowParserMixin.parseBlockBody (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:13109:10)
    at FlowParserMixin.parseBlock (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:13097:10)
    at FlowParserMixin.parseFunctionBody (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:11922:24)
    at FlowParserMixin.parseFunctionBody (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:5116:11)
    at FlowParserMixin.parseFunctionBodyAndFinish (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:11908:10)
    at FlowParserMixin.parseFunctionBodyAndFinish (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:5124:18)
    at C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:13252:12
    at FlowParserMixin.withSmartMixTopicForbiddingContext (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:12232:14)
    at FlowParserMixin.parseFunction (C:\Users\milen\OneDrive\Documents\UCF\classwork\terminator\node_modules\@babel\parser\lib\index.js:13251:10)[39m[22m

[1m[31mERROR[39m[22m in [1m[eslint] 
src\component\LoginForm.js
  Line 117:2:  Parsing [1m[31merror[39m[22m[1m: Adjacent JSX elements [1m[33mmust[39m[22m[1m be wrapped in an enclosing tag. Did you want a JSX fragment <>...</>? (117:2)

[39m[22m

webpack compiled with [1m[31m2 errors[39m[22m
Compiling...
Compiled successfully!
webpack compiled [1m[32msuccessfully[39m[22m
Compiling...
Compiled successfully!
webpack compiled [1m[32msuccessfully[39m[22m
